--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-# requirements.txt - Python 3.11 compatible
-streamlit==1.29.0
-scikit-learn==1.3.0
-pandas==2.0.3
-numpy==1.24.3
-matplotlib==3.7.2
-seaborn==0.12.2
+streamlit>=1.29.0
+scikit-learn>=1.5.0
+pandas>=2.0.0
+numpy>=1.26.0
+matplotlib>=3.7.0
+seaborn>=0.13.0
 joblib==1.3.2
-plotly==5.17.0
-# XGBoost optional - remove if causing issues
+plotly>=5.18.0
